<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_marginTop="30dp"
        style="@style/TitleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_sub_title"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/login_email"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_sub_title"
        app:startIconDrawable="@drawable/icon_circle_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/title_password"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_email"
        app:startIconDrawable="@drawable/icon_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            style="@style/TextInputEditText"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textColor="#EF6C00"
        android:textAlignment="textEnd"
        style="@style/SubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_form"
        android:layout_marginBottom="20dp"
        style="@style/ButtonGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/not_have_account"/>


    <TextView
        android:id="@+id/not_have_account"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_not_account"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>