<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:layout_marginTop="30dp"
        style="@style/TitleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_sub_title"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/register_full_name"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_sub_title"
        app:startIconDrawable="@drawable/icon_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_full_name"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_email"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_full_name"
        app:startIconDrawable="@drawable/icon_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_email"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_account"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_register_email"
        app:startIconDrawable="@drawable/icon_circle_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_account"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_password"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_register_account"
        app:startIconDrawable="@drawable/icon_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_password"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_confirm_password"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_register_password"
        app:startIconDrawable="@drawable/icon_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_confirm_password"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_register_form"
        app:layout_constraintBottom_toTopOf="@id/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/have_account"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>